css/style.css
* {
    box-sizing: border-box;
    list-style: none;
}

body {
    height: 100%;
    background-color: rgba(30, 30, 250, .2);
}

main {
    text-align: center;
}

main > article {
    width: 100%;
    margin-bottom: 4%;
}

.bx.bx-search {
    font-size: 24px;
    width: 100%;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    color: #fff;
}

.search-nav{
    padding: 0 6.5% 0;
}

/* MOBILE VERSION */
@media only screen and (max-width: 768px) {
    .notification {
        color: white;
        font-size: 24px;
        width: 100%;
        height: 100%;
    }

    .notification li {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .sidebar {
        display: none;
    }
    
    .toggle {
        display: none;
    }

    .input-search {
        display: none;
    }

    main {
        width: 100%;
        margin-top: 60px;
    }

    main > article {
        margin-bottom: 10%;
    }

    footer ul li {
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 4px;
        width: 100%;
        height: 40px;
        font-size: 24px;
        padding: 0 16px;
        color: #fff;
        transition: .3s;
    }

    footer ul li.active {
        background: #ff328e !important;
    }

    .i-bell {
        display: flex;
        border-radius: 4px;
        align-items: center;
        justify-content: center;
        height: 40px;
        font-size: 24px;
        padding: 0 16px;
        color: #fff;
        transition: .3s;

    }
    .i-bell.active {
        background: #ff328e !important;
    }
}

/* DESKTOP VERSION */
@media only screen and (min-width: 769px){
    .sidebar {
        width: 120px;
        height: 100%;
        backdrop-filter: blur(40px);
        background: rgba(10, 10, 10, .65);
        box-shadow: 0 8px 32px rgb(2, 4, 24);
        border-right: 2px solid rgba(255, 255, 255, .09);
        transition: .4s ease-in-out;
        position: fixed;
    }

    .sidebar.open {
        width: 360px;
    }

    .sidebar .nav-title {
        color: #dadada;
        margin: 10px 0 18px;
        padding: 0 0 0 30px;
        font-size: 26px;
        font-weight: 500;
        pointer-events: none;
        opacity: 0;
    }

    .sidebar.open .nav-title {
        opacity: 1;
        transition: .4s;
        transition-delay: .2s;
    }

    .sidebar nav {
        padding: 60px 30px 0 0;
    }

    .sidebar nav .nav-item {
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: flex-start;
        border-radius: 4px;
        width: 100%;
        height: 56px;
        padding: 0 16px;
        margin: 8px 0;
        color: #fff;
        transition: .3s;
    }

    .sidebar nav .nav-item i {
        font-size: 26px;
    }

    .sidebar nav .nav-item span {
        font-size: 18px;
        margin-left: 8px;
        opacity: 0;
        pointer-events: none;
    }

    .sidebar.open nav .nav-item span {
        opacity: 1;
        pointer-events: visible;
        transition: .4s;
        transition-delay: .2s;
    }

    .sidebar nav .nav-item.active {
        background: #ff328e !important;
    }

    .sidebar nav .nav-item:hover {
        background: rgba(255, 255, 255, .1);
    }

    .toggle {
        cursor: pointer;
        font-size: 38px;
        line-height: 50%;
        text-align: center;
        padding: 2px 0 2px 2px;
        background: rgba(255, 255, 255, 1);
        transition: .3s;
    }

    .toggle.open {
        background: rgb(255, 255, 255, .5);
        transition: .3s;
    }

    .sidebar .toggle i {
        transition: .4s linear;
    }

    header {
        display: grid;
        align-items: center;
        justify-content: left;
    }

    header .toggle {
        margin-left: 39px;
        margin-right: 70px;
    }

    header .toggle:hover{
        background: rgb(255, 255, 255, .7);
    }

    .search-nav {
        padding: 0;
        margin-left: 100px;
    }

    main {
        margin-top: 60px;
        margin-left: 120px;
        width: calc(100% - 120px);
    }

    .footer.mobile {
        display: none;
    }
}

/*LOGO*/
.icons {
    display: flex;
    flex-wrap: wrap;
    padding: 0.5% 5%;
}

.icons .icon {
    cursor: pointer;
    position: relative;
    width: 40px;
    height: 40px;
    margin: 10px;
    transition: .3s ease-out;
}

.icons .icon:hover {
    scale: 1.10;
}

.icons .icon .bg {
    position: absolute;
    top: -5px;
    right: -5px;
    background: #ff328e;
    width: 100%;
    height: 100%;
    border-radius: 30%;
    transform: rotate(14deg);
    transition: .3s ease-out;
}

.icons .icon:hover .bg {
    transform: rotate(24deg);
}

.icons .icon .glass {
    width: 100%;
    height: 100%;
    display: grid;
    place-items: center;
    backdrop-filter: blur(15px);
    background: rgba(255, 255, 255, .2);
    border: 2px solid rgba(255, 255, 255, .2);
    border-radius: 30%;
}

.icons .icon img {
    width: 30px;
    height: 25px;
    filter: invert(50%) opacity(92%) brightness(220%);
}

.logo {
    display: flex;
    justify-content: right;
    align-items: center;
}

